# Structured-Clinical-Signal-Extraction-Prototype-A-DocsNDevs-Initiative

./: .gitignore  DocsAndDevs_DevDiary.md  README.md  pyproject.toml
Reports/: Rep131225 1.txt
data/: Synth_Case_1.json  dondieplz.db
scripts/: create_db.py  openAI.py
src/dundieplz/: gui_app.py  test_extractor.sh
src/dundieplz/extract/: extractor.py  llm_client.py  rule_llm_client.py
src/dundieplz/schemas/: core_signals.py  cssrs.py  extractor_schema.py  phq9.py
tests/: test_schemas.py
