[project]
name = "dundieplz"
version = "0.1.0"
description = "Framework-conditional clinical text structuring prototype (non-clinical)."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
  "rich>=13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
